Fix spacing and alignment of nav items

--- a/app/assets/stylesheets/navigationbar.scss
+++ b/app/assets/stylesheets/navigationbar.scss
@@ -1,11 +1,53 @@
-.navbar-brand {
-  img {
-    width: 18rem;
-    // height: 8rem;
-    object-fit: cover;
-  }
+.navbar {
+	.navbar-brand {
+		img {
+			width: 18rem;
+			// height: 8rem;
+			object-fit: cover;
+		}
 
-  &:hover {
-    background: none;
-  }
+		&:hover {
+			background: none;
+		}
+	}
+	.navbar-nav {
+		.nav-item {
+			.nav-link {
+				font-size: 1.05rem;
+				&:hover {
+					background: none;
+				}
+			}
+		}
+	}
+
+	form {
+		position: relative;
+
+		.fa-search {
+			position: absolute;
+			top: 20px;
+			left: 20px;
+			color: #9ca3af;
+		}
+
+		span {
+			position: absolute;
+			right: 17px;
+			top: 13px;
+			padding: 2px;
+			border-left: 1px solid #d1d5db;
+		}
+
+		.form-input {
+			height: 3rem;
+			text-indent: 33px;
+			border-radius: 10px;
+		}
+
+		.form-input:focus {
+			box-shadow: none;
+			border: none;
+		}
+	}
 }
